[package]
name = "nimage"
version = "0.2.0-dev"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"

[dependencies.twox-hash]
# Use forked twox-hash to get XxHash32::total_len_64(); hopefully my PR gets merged.
# Turn off default std feature which pulls in the rand crate as a dependency.
git = "https://github.com/aswild/twox-hash"
branch = "pr/xxh32-total64"
default-features = false

[[bin]]
name = "mknImage"
path = "src/mknImage/main.rs"
